--- a/package.json
+++ b/package.json
@@ -8,12 +8,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.3.0",
+    "axios": "^0.24.0",
+    "formik": "^2.2.9",
+    "moment": "^2.29.1",
     "next": "12.0.7",
+    "nookies": "^2.5.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-dropzone": "^11.4.2",
+    "react-icons": "^4.3.1",
+    "swr": "^1.1.2",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "uuid": "^8.3.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.1",
     "eslint": "8.5.0",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.8"
   }
 }
